# ssb-decomp-re

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  BUILDING.md  CLAUDE.md  MUSIC_AND_SFX_DISCOVERIES.md  Makefile  PARTICLE_BANK_DISCOVERIES.md  README.md  assets.yaml  audio.md  decomp.yaml  default.nix  diff.py  diff_settings.py  dodo.py  first_diff.py  installDependencies.sh  jp_report.json  livediff.sh  mips-embedded-platform.patch  mips_to_c.sh  permuter_settings.toml  relocData.md  report.json  smashbrothers.jp.yaml  smashbrothers.us.md5  smashbrothers.us.yaml  smashbrothers.yaml  ssb64.us.sha1  us_report.json
docs/: SMASH BROTHERS-NALE.txt  braindump.md  index.html  ssb-overlay-trees.txt  ssb64.in.ld  ssb_fighter_animations.txt
doutils/: config.py  parsemk.py  pathutil.py  toolchain.py
game/: hardware-registers.ld  not-found-sym.ld  not-found-sym.ld.rej  spec.dhall
include/: assert.h  bstring.h  buttons.h  common.h  macro.inc  macros.h  missing_libultra.h  osint.h  piint.h  regdef.h  reloc_data.h  sgidefs.h  siint.h  ssb_types.h  stdarg.h  stddef.h  stdlib.h  string.h  tinymon.h  ultrahost.h
src/: boot.s  character_select.h  colanimdata.c  dbcubekirbyface.txt  debug.h  entry.s  ftanimend.c  gsdma.c  item_links_bomb.c  (+61 more)
tools/rust/extract/: Cargo.toml
tools/rust/extract/src/: clean.rs  config.rs  extract.rs  ignore.rs  list.rs  local.rs  main.rs
tools/rust/extract/src/extract/: binaries.rs  resources.rs  sprites.rs
tools/rust/halld/: Cargo.toml  README.md
tools/rust/halld/src/: cache.rs  lib.rs  link.rs  main.rs
tools/rust/halld/src/link/: chdr.rs  mkdep.rs  pass1.rs  pass2.rs
tools/rust/libsprite/: Cargo.toml
tools/rust/libsprite/src/: lib.rs
tools/rust/spec/: Cargo.toml
tools/rust/spec/src/: convert.rs  main.rs
tools/rust/spec/src/convert/: header.rs  linkerscript.rs
(+16623 files in other folders)
