[package]
name = "extract"
version = "0.1.0"
authors = ["SSB64d team <unknown>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde = {version = "1.0", features = ["derive"]}
toml = "0.5.6"
serde_yaml = "0.8"
serde_json = "1.0"
pico-args = "0.4.0"
indoc = "1.0"
vpk0 = "0.8"
libsprite = {path = "../libsprite"}
libgfx = {path = "../libgfx", features = ["png"]}
halld = {path = "../halld"}
