[package]
name = "halld"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pico-args = "0.4.2"
anyhow = "1"
indoc = "1"
rayon = "1.5"
vpk0 = "0.8"
object = { version = "0.28.1", default_features = false, features = ["read_core", "write_std", "elf"] }
md-5 = "0.10.0"
base16ct = { version = "0.1.1", features = ["alloc"] }
