[package]
name = "spec"
version = "0.1.0"
authors = ["SSB64d team <unknown>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pico-args = "0.4"
serde_dhall = {version = "0.10", default-features = false}
serde = "1"
indoc = "1"
anyhow = "1"
